@@ -83,6 +83,7 @@ AnyEvent::Open3::Simple                        = 0.87
 AnyEvent::WebSocket::Client                    = 0.53
 App::af                                        = 0.15
 App::cpangitify                                = 0.17
+App::plasm                                     = 0.01
 App::Prove::Plugin::TermTable                  = 0.03
 App::Prove::Plugin::TermTableStty              = 0.03
 App::pwhich                                    = 1.16
@@ -113,7 +114,7 @@ Env::ShellWords                                = 0.02
 Exception::Class::DBI                          = 1.04
 FFI                                            = 1.15
 FFI::C                                         = 0.08
-FFI::CheckLib                                  = 0.26
+FFI::CheckLib                                  = 0.27
 FFI::ExtractSymbols                            = 0.03
 FFI::Platypus                                  = 1.11
 FFI::Platypus::Lang::CPP                       = 0.04
@@ -165,7 +166,7 @@ Test2::Tools::URL                              = 0.05
 Text::Hunspell::FFI                            = 0.02
 URI::ws                                        = 0.03
 UUID::FFI                                      = 0.07
-Wasm                                           = 0.05
+Wasm                                           = 0.09
 Wasm::Hook                                     = 0.02
 WebService::DailyConnect                       = 0.02
 WebService::LiveJournal                        = 0.08
